-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.10.8
-
None
-
3
-
9223372036854775807
lfs quota (without -g option) doesn't show correct group quota information
# lfs quota /lustre/ Disk quotas for usr root (uid 0): Filesystem kbytes quota limit grace files quota limit grace /lustre/ 13208 0 0 - 1096 0 0 - Disk quotas for grp root (gid 0): Filesystem kbytes quota limit grace files quota limit grace /lustre/ 0 0 0 - 0 0 0 - * kbytes(0 is dispolayed) should be 13208 # lfs quota -g root /lustre/ Disk quotas for grp root (gid 0): Filesystem kbytes quota limit grace files quota limit grace /lustre/ 13208 0 0 - 1096 0 0 -
This is because, on the server side GETQUOTA is not executed when oqctl->qc_dqblk.dqb_curspace not 0. So, qctl.qc_dqblk need to be cleared to display correct.
static int quotactl_ioctl(struct ll_sb_info *sbi, struct if_quotactl *qctl) { <snip> if (cmd == Q_GETQUOTA && !(oqctl->qc_dqblk.dqb_valid & QIF_SPACE) && !oqctl->qc_dqblk.dqb_curspace) {
- is related to
-
LU-12868 sanity-quota test 65 100% failure
-
- Open
-