LU-12694 quota: display correct group quota information

GETQUOTA is not executed when oqctl->qc_dqblk.dqb_curspace
not 0. So, qctl.qc_dqblk need to be cleared
to display correct.

Signed-off-by: Tatsushi Takamura <takamr.tatsushi@jp.fujitsu.com>
Change-Id: I5163c00fbc58ec1dd04c912e36abd01a7d2239ad
Reviewed-on: https://review.whamcloud.com/35917
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Shilong Wang <wshilong@ddn.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>